--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "lucide-react": "^0.482.0",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.12.0",
