--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
